# game-engine-sdl

./: CMakeLists.txt
config/: config.yaml
examples/0-init-engine/: CMakeLists.txt  main.cpp
lib/game-engine-core/: CMakeLists.txt
lib/game-engine-core/src/: Engine.cpp  Engine.hpp
lib/game-engine-core/src/config/: Config.hpp  Messages.hpp  WindowConfig.hpp
lib/game-engine-core/src/exceptions/: EngineException.hpp  RendererInitException.hpp  WindowInitException.hpp
lib/game-engine-core/src/renderer/: Window.cpp  Window.hpp
